SubVersion: $Id$

Set svn:eol property to native on all files
	
To do : 
- manage ERR packets which can be received at any time
- make dirlist more generic (merge apps & vars)

Log:

- 26/05/2006, version 0.1.3: roms/tyler
	- definetely fixed warnings on TI keys structures (roms)
	- fixed TI-83+/TI-84+ ROM Dumping Timeout Error Bug (tyler)

- 16/05/2006, version 0.1.2: roms
	- implemented send_os for Titanium/USB and fixed some commands
	- implemented send_os for TI84+/USB
	- added Titanium/USB ROM dumper
	- increased ROM dumper block size from 1KB to 4KB (faster)
	- fixed misfeature in Titanium get_dirlist
	- fixed OS sending page address in TI84+/USB support

- 06/05/2006, version 0.1.1: roms
	- make ticalcs_dirlist_mem_used useable with apps tree
	- implemented get_memfree functions
	- added a new probing method for USB hand-helds only (faster)
	- added FTS_BACKUP flag for hand-helds with real backup capability
	- added common function which emulates a backup by grouping
	- definitely fixed return value for probing functions
	- implemented a garbage collector for virtual packets, calc attributes anc calc parameters.
		Needed because a DUSB function may returns an error without releasing allocated memory
		(easier by this way).
	- added ticalcs_dirlist_flash_used which count memory used by both archived variables and apps
	- fixed pbar with TI73/84+ sending of FLASH app
	- fixed ca_del_array & cp_del_array for garbage collector
	- manage hand-held error codes
	- manage delaying packets

- 15/04/2006, version 0.1.0: roms
	- implemented USB hand-helds support
	- split sending of FLASH app & os into 2 functions.
	- renamed some function of the API (send/recv_flash into send/recv_app)

- 25/03/2006, version 0.0.8: roms
	- bitmap for screenshot is now allocated at the end of transfer.
	- work on DirectLink in progress.

- 16/03/2006, version 0.0.7: roms
	- fixed bug in TI92 recv_backup
	- added periodic refresh from callbacks

- 21/02/2006, version 0.0.6: roms