@@ -8,6 +8,10 @@ To do :
 
 Log:
 
+- 31/05/2006, version 0.1.4: roms
+	- don't export ticalcs_probe_calc_1/2 any longer because they can't be used easily
+	outside of the library
+
 - 26/05/2006, version 0.1.3: roms/tyler
 	- definetely fixed warnings on TI keys structures (roms)
 	- fixed TI-83+/TI-84+ ROM Dumping Timeout Error Bug (tyler)
